fix nav bar alignment

--- a/home.css
+++ b/home.css
@@ -4,7 +4,7 @@
   text-transform: uppercase;
   margin-top: 1rem;
   min-height: 112px;
-
+  padding: 1rem;
 
 }
 .title-other
@@ -62,6 +62,19 @@ margin-top: 1.5rem;
 {
    margin: 0 auto 0 auto;
 
+}
+.navbar-header {
+   margin: 0 auto;
+   display: table;
+
+}
+.navbar-nav
+{
+  align-items: flex-start;
+}
+.navbar
+{
+  margin: 1rem;
 }
 .mcontainer
 {
@@ -124,6 +137,7 @@ body
   font-size: 1rem;
   line-height: 1.25rem;
   margin-bottom: 16px;
+
 }
 .faculty-card
 {
@@ -142,6 +156,7 @@ body
 {
   color: #505659;
   font-size: 1rem;
+  padding-left: 5px;
 
 }
 
